--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=8086
+logging.level.org.springframework.web=DEBUG
+
+# Templates reloading during development
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.thymeleaf.cache=false
+
+
+
